--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   box-sizing: border-box;
-  color: #444;
+  color: #000;
 }
 
 body {
@@ -17,10 +18,20 @@ body {
 
 .no-current-score,
 .your-current-score,
-.number-choice-form,
 .no-high-score,
 .your-high-score {
   margin-bottom: 20px;
+  margin-left: 10px;
+}
+
+.number-choice-form {
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.msg-space {
+  height: 20px;
+  margin-bottom: 10px;
   margin-left: 10px;
 }
 
